--- a/starter/app/src/main/res/values/colors.xml
+++ b/starter/app/src/main/res/values/colors.xml
@@ -3,4 +3,7 @@
     <color name="colorPrimary">#008577</color>
     <color name="colorPrimaryDark">#00574B</color>
     <color name="colorAccent">#D81B60</color>
+    <color name="white">#FFFFFF</color>
+    <color name="c_0C5B9A">#0C5B9A</color>
+    <color name="c_000000">#000000</color>
 </resources>
